                      for handling different types of Profinet IO.
110223 cs -           Profinet and Profibus configurators, default module class setting added, and Apply button added.
110223 cs profinet    Profinet configurator, order number added to text in module type list.
110328 cs profinet    Profinet configurator, choice wether to clear or keep data when gsdml file is changed.
110429 cs profibus    Profibus gsd Bit and BitArea syntax fix for space between Bit and (
110531 cs profinet    Recall buffer added to profinet configurator.
110531 cs profinet    Script functions GetIoDeviceData and SetIoDeviceData to modify profinet configuration added.
110909 rk profinet    Added functionality for acyclic write to a device
111222 rk profinet    Added support for handling more than one API.
111222 rk profinet    Bugfixes in profinet_viewer.
111230 rk profinet    Set correct status on profinet device when losing connection.
110921 cs profinet    Profinet configurator script functions, bugfix for missing gsdml filename
111021 cs profinet    Profinet configurator, module name restrictions removed
111031 cs profibus    Profibus configurator, fix for modules with ExtUserPrmDataLen specified but not ExtUserPrmDataConst
111103 cs  profinet   Profinet configurator, rename of module names allowed, and some V2.25 attributes added
111118 cs  profibus   Profibus configurator, gsd parser fix for module name and configdata with no space in between
111122 cs  profinet   Profinet Device method, CopyDevice, added
111205 cs  profinet   Profinet configurator, serial number viewed for module
111205 cs  profibus   Softing profiboard, MaxSlaveDiagLen added
111222 cs  profinet   Profinet, support for different API's
120102 cs  profinet   Profinet, set correct status on profinet device when losing connection
120120 cs  profinet   Profinet, IO status wasn't set properly
120227 cs  profinet   Profinet configurator bugfix in submodule index